✅ meta 태그 위치 수정 & og:image 경로 수정

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,37 @@
       sizes="16x16"
       href="%PUBLIC_URL%/images/favicon-16x16.png"
     />
+    <meta
+      name="description"
+      content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
+    />
+    <meta
+      name="keywords"
+      content="todo,todolist,투두,투두리스트,세모,네모,동그라미,triangle,square,circle"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:image:width" content="350" />
+    <meta property="og:image:height" content="140" />
+    <meta property="og:url" content="https://tsc-todo-list.vercel.app" />
+    <meta property="og:title" content="세모 네모 동그라미 TODO LIST" />
+    <meta property="og:image" content="https://i.ibb.co/pwCZXLF/og-card.png" />
+    <meta
+      property="og:description"
+      content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
+    />
+    <meta property="og:site_name" content="세모 네모 동그라미 TODO LIST" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="세모 네모 동그라미 TODO LIST" />
+    <meta
+      name="twitter:description"
+      content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
+    />
+    <meta name="twitter:image" content="https://i.ibb.co/pwCZXLF/og-card.png" />
+
+    <link rel="canonical" href="https://tsc-todo-list.vercel.app" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
