--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
     />
     <meta
       name="keywords"
-      content="todo,todolist,투두,투두리스트,세모,네모,동그라미,triangle,square,circle"
+      content="todo,todolist,투두,투두리스트,세모,네모,동그라미,triangle,square,circle,SHAPE OF TASK"
     />
 
     <meta property="og:type" content="website" />
@@ -100,16 +100,16 @@
     <meta property="og:image:width" content="350" />
     <meta property="og:image:height" content="140" />
     <meta property="og:url" content="https://tsc-todo-list.vercel.app" />
-    <meta property="og:title" content="세모 네모 동그라미 TODO LIST" />
+    <meta property="og:title" content="SHAPE OF TASK" />
     <meta property="og:image" content="https://i.ibb.co/pwCZXLF/og-card.png" />
     <meta
       property="og:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
     />
-    <meta property="og:site_name" content="세모 네모 동그라미 TODO LIST" />
+    <meta property="og:site_name" content="SHAPE OF TASK" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="세모 네모 동그라미 TODO LIST" />
+    <meta name="twitter:title" content="SHAPE OF TASK" />
     <meta
       name="twitter:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
