✅ favicon 이미지 수정

--- a/public/index.html
+++ b/public/index.html
@@ -3,70 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="%PUBLIC_URL%/images/ms-icon-144x144.png"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="%PUBLIC_URL%/images/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="%PUBLIC_URL%/images/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="%PUBLIC_URL%/images/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="%PUBLIC_URL%/images/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="%PUBLIC_URL%/images/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="%PUBLIC_URL%/images/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="%PUBLIC_URL%/images/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="%PUBLIC_URL%/images/apple-icon-152x152.png"
-    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/images/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="%PUBLIC_URL%/images/android-icon-192x192.png"
+      href="%PUBLIC_URL%/images/apple-touch-icon.png"
     />
     <link
       rel="icon"
@@ -77,22 +17,25 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="96x96"
-      href="%PUBLIC_URL%/images/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
       sizes="16x16"
       href="%PUBLIC_URL%/images/favicon-16x16.png"
     />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
     <meta
       name="description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
     />
     <meta
       name="keywords"
-      content="todo,todolist,투두,투두리스트,세모,네모,동그라미,triangle,square,circle,SHAPE OF TASK"
+      content="todo,todolist,투두,투두리스트,세모,네모,동그라미,triangle,square,circle,task,SHAPE OF TASK"
     />
 
     <meta property="og:type" content="website" />
@@ -101,7 +44,7 @@
     <meta property="og:image:height" content="140" />
     <meta property="og:url" content="https://tsc-todo-list.vercel.app" />
     <meta property="og:title" content="SHAPE OF TASK" />
-    <meta property="og:image" content="https://i.ibb.co/pwCZXLF/og-card.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/og-card.png" />
     <meta
       property="og:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
@@ -114,9 +57,9 @@
       name="twitter:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
     />
-    <meta name="twitter:image" content="https://i.ibb.co/pwCZXLF/og-card.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/og-card.png" />
 
-    <link rel="canonical" href="https://tsc-todo-list.vercel.app" />
+    <link rel="canonical" href="https://shape-of-task.vercel.app" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
