--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <title>React App</title>
+    <title>SHAPE OF TASK</title></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
