🗂️ 프로젝트 구조 개선 및 새로운 컴포넌트 추가, ESLint 설정 변경

--- a/index.html
+++ b/index.html
@@ -2,31 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
+    <link rel="icon" href="/images/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/images/apple-touch-icon.png"
+      href="/images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/images/favicon-32x32.png"
+      href="/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/images/favicon-16x16.png"
+      href="/images/favicon-16x16.png"
     />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta
       name="description"
@@ -43,7 +40,7 @@
     <meta property="og:image:height" content="140" />
     <meta property="og:url" content="https://tsc-todo-list.vercel.app" />
     <meta property="og:title" content="SHAPE OF TASK" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/og-card.png" />
+    <meta property="og:image" content="/images/og-card.png" />
     <meta
       property="og:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
@@ -56,14 +53,14 @@
       name="twitter:description"
       content="세모 네모 동그라미로 나의 일상을 가득 채워보세요!"
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/og-card.png" />
+    <meta name="twitter:image" content="/images/og-card.png" />
 
     <link rel="canonical" href="https://shape-of-task.vercel.app" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -78,12 +75,13 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <title>SHAPE OF TASK</title></title>
+    <title>SHAPE OF TASK</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="portal-root"></div>
+    <script type="module" src="/src/index.tsx"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
